--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 </div>
 <div class="content">
   <h2 id="self-introduction">Self Introduction</h2>
-<p>IMPORTANT: an archive of the previous version of this website can be visualized at <a href="https://archive20210730.cedricvillani.fr">archive20210730.cedricvillani.fr</a>.</p>
+<p>IMPORTANT: an archive of the previous version of this website can be found at <a href="https://archives.cedricvillani.fr">archives.cedricvillani.fr</a>.</p>
 <p>The purpose of this website is to list all of the cases I am going to submit to the European Court of Human Rights (ECtHR).</p>
 <p>One of this case is a high profile case involving McDonald&rsquo;s Corporation which I accuse of having committed aggravated fraud on a massive scale. I recommand you to <a href="https://www.cedricvillani.fr/docs/tgi/Signification-Assignation-BOULOGNE-BILLANCOURT-15-novembre-2016_Redacted%20small.pdf">read this document</a> if you speak French.</p>
 <p>For some yet unclear reasons, McDonald&rsquo;s France has so far managed to beat the odds and has succeeded not to be indicted.</p>
